--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
-baseURL = "https://example.com"
-title = "Your title"
+baseURL = "http://hackerdemic.com"
+title = "hackerdemic"
 themesDir = "../.."
 theme = "m10c"
 paginate = 8
