--- a/hugo.toml
+++ b/hugo.toml
@@ -6,54 +6,58 @@ sectionPagesMenu = 'main'
 
 [menu]
   [[menu.main]]
-    identifier = "home"
-    name = "Home"
-    url = "/"
+    identifier = 'home'
+    name = 'Home'
+    url = '/'
     weight = 1
   [[menu.main]]
-    identifier = "tags"
-    name = "Tags"
-    url = "/tags/"
+    identifier = 'tags'
+    name = 'Tags'
+    url = '/tags/'
     weight = 2
   [[menu.main]]
-    identifier = "about"
-    name = "About"
-    url = "/about/"
+    identifier = 'about'
+    name = 'About'
+    url = '/about/'
     weight = 3
 
 [params]
-  author = "John Doe"
-  description = "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
-  menu_item_separator = " - "
+  author = 'ATHL337'
+  description = 'Lorem ipsum dolor sit amet, consectetur adipiscing elit.'
+  menu_item_separator = ' - '
   [[params.social]]
-    icon = "github"
-    name = "Github"
-    url = "https://github.com/gohugoio"
+    icon = 'github'
+    name = 'Github'
+    url = 'https://github.com/ATHL337'
   [[params.social]]
-    icon = "twitter"
-    name = "Twitter"
-    url = "https://twitter.com/gohugoio"
+    icon = 'twitter'
+    name = 'Twitter'
+    url = 'https://twitter.com/gohugoio'
+  [[params.social]]
+    icon = "linkedin"
+    name = "LinkedIn"
+    url = 'linkedin.com/in/alfredopelaez/'
 
   # Default theme
   #[params.style]
-  #  darkestColor = "#242930"
-  #  darkColor = "#353b43"
-  #  lightColor = "#afbac4"
-  #  lightestColor = "#ffffff"
-  #  primaryColor = "#57cc8a"
+  #  darkestColor = '#242930'
+  #  darkColor = '#353b43'
+  #  lightColor = '#afbac4'
+  #  lightestColor = '#ffffff'
+  #  primaryColor = '#57cc8a'
 
   # Green theme
   #[params.style]
-  #  darkestColor = "#315659"
-  #  darkColor = "#253031"
-  #  lightColor = "#96a879"
-  #  lightestColor = "#fff"
-  #  primaryColor = "#dad865"
+  #  darkestColor = '#315659'
+  #  darkColor = '#253031'
+  #  lightColor = '#96a879'
+  #  lightestColor = '#fff'
+  #  primaryColor = '#dad865'
 
   # Red theme
   #[params.style]
-  #  darkestColor = "#d35050"
-  #  darkColor = "#212121"
-  #  lightColor = "#d6d6d6"
-  #  lightestColor = "#d3d3d3"
-  #  primaryColor = "#ffffff"
+  #  darkestColor = '#d35050'
+  #  darkColor = '#212121'
+  #  lightColor = '#d6d6d6'
+  #  lightestColor = '#d3d3d3'
+  #  primaryColor = '#ffffff'
