--- a/hugo.toml
+++ b/hugo.toml
@@ -23,16 +23,13 @@ sectionPagesMenu = 'main'
 
 [params]
   author = 'ATHL337'
-  description = 'Lorem ipsum dolor sit amet, consectetur adipiscing elit.'
+  description = '𝙄𝙩’𝙨 𝙣𝙤𝙩 𝙤𝙫𝙚𝙧 𝙬𝙝𝙚𝙣 𝙮𝙤𝙪 𝙡𝙤𝙨𝙚, 𝙞𝙩’𝙨 𝙤𝙫𝙚𝙧 𝙬𝙝𝙚𝙣 𝙮𝙤𝙪 𝙦𝙪𝙞𝙩.'
   menu_item_separator = ' - '
   [[params.social]]
     icon = 'github'
     name = 'Github'
     url = 'https://github.com/ATHL337'
-  [[params.social]]
-    icon = 'twitter'
-    name = 'Twitter'
-    url = 'https://twitter.com/gohugoio'
+
   [[params.social]]
     icon = "linkedin"
     name = "LinkedIn"
