--- a/hugo.toml
+++ b/hugo.toml
@@ -7,12 +7,12 @@ sectionPagesMenu = 'main'
 [menu]
   [[menu.main]]
     identifier = 'home'
-    name = 'Home'
+    name = 'home'
     url = '/'
     weight = 1
   [[menu.main]]
     identifier = 'tags'
-    name = 'Tags'
+    name = 'tags'
     url = '/tags/'
     weight = 2
   [[menu.main]]
