--- a/hugo.toml
+++ b/hugo.toml
@@ -22,9 +22,11 @@ sectionPagesMenu = 'main'
     weight = 3
 
 [params]
+  mainSections = ["post"]
   author = 'ATHL337'
   description = '𝙄𝙩’𝙨 𝙣𝙤𝙩 𝙤𝙫𝙚𝙧 𝙬𝙝𝙚𝙣 𝙮𝙤𝙪 𝙡𝙤𝙨𝙚, 𝙞𝙩’𝙨 𝙤𝙫𝙚𝙧 𝙬𝙝𝙚𝙣 𝙮𝙤𝙪 𝙦𝙪𝙞𝙩.'
   menu_item_separator = ' - '
+  opengraph = true
   
   [[params.social]]
     icon = 'github'
